--- a/src/containers/HomePage/HomeHeader.scss
+++ b/src/containers/HomePage/HomeHeader.scss
@@ -1,17 +1,17 @@
 
 .home-header-container {
-    height: 70px;
-    border: 1px solid black;
-    padding: 0 20px;
+    height: 60px;
+    padding: 10px 0;
 
     .home-header-content {
         width: 100%;
         height: 100%;
         display: flex;
+        justify-content: center;
+        align-items: center;
 
         .left-content {
             width: 25%;
-            border: 1px solid green;
             display: flex;
             align-items: center;
 
@@ -24,8 +24,8 @@
 
             .header-logo {
                 background: url(../../assets/images/bookingcare-2020.svg);
-                height: 100%;
-                width: 100%;
+                height: 40px;
+                width: 182px;
                 background-repeat: no-repeat;
                 background-position: center;
                 background-size: cover;
@@ -36,7 +36,6 @@
 
         .center-content {
             width: 50%;
-            border: 1px solid rgb(90, 88, 89);
 
             display: flex;
             justify-content: space-between;
@@ -55,12 +54,118 @@
 
         .right-content {
             width: 25%;
-            border: 1px solid yellow;
             display: flex;
-            justify-content: center;
+            justify-content: end;
             align-items: center;
+            // border: 1px solid red;
         }
 
+    }
+
+}
+
+.home-header-banner {
+    background-image: url(../../assets/images/bookingcare-cover-4.jpg);
+    background-color: #fff;
+    background-repeat: no-repeat;
+    background-position: center;
+    background-size: cover;
+    height: 500px;
+    width: 100%;
+
+    .content-up {
+
+        height: 50%;
+        background-image: linear-gradient(rgba(0, 0, 0, 0.25),rgba(255, 255, 255, 0.1));
+
+        .title {
+            font-size: 32px;
+            color: #fff;
+            margin-bottom: 20px;
+            text-transform: uppercase;
+            text-shadow: 1px 1px 1px #333;
+            padding-top: 45px;
+        }
+    
+        .search {
+            
+            // width: fit-content;
+             max-width: 450px;
+            margin: 0 auto;
+            position: relative;
+            i {
+                position: absolute;
+                top: 50%;
+                left: 10px;
+                transform: translateY(-50%);
+                padding: 10px;
+            }
+            input {
+                background: #f7d800;
+                color: #333;
+                outline: none;
+                border-radius: 25px;
+                border: 1px solid transparent;
+                line-height: 50px;
+                height: 50px;
+                display: block;
+                width: 100%;
+                padding-left: 50px;
+                padding-right: 25px;
+            }
+        }
+    }
+
+    .content-down {
+
+        height: 50%;
+        display: flex;
+        justify-content: center;
+        align-content: flex-end;
+
+        background-image: linear-gradient(rgba(255, 255, 255, 0.1),rgba(255, 255, 255, 0.9),rgba(255, 255, 255, 1));
+      
+        // margin: 0 auto;
+        .options {
+            margin-top: auto;
+            display: flex;
+            gap: 25px;
+            .option-child {
+
+                display: flex;
+                flex-direction: column;
+                align-items: center;
+
+                .icon-child {
+                    width: 55px;
+                    height: 55px;
+                    font-size: 30px;
+                    border: 1px solid transparent;
+                    border-radius: 50%;
+                    background-color: white;
+                    text-align: center;
+                    box-shadow: 0px 1px 2px rgba(41, 40, 40, 0.5);
+                    color: #45c3d2;
+                    display: flex;
+                    align-items: center;
+                    justify-content: center
+                }
+    
+                .text-child {
+                    font-size: 15px;
+                    padding-top: 5px;
+                    font-weight: 600;
+                    color: #333;
+                    text-align: center;
+                    transition: all linear 0.3s;
+
+                    &:hover {
+                        color: #45c3d2;
+                        cursor: pointer;
+                    }
+                }
+            }
+        }
     }
 
 }
