--- a/src/containers/HomePage/HomeHeader.scss
+++ b/src/containers/HomePage/HomeHeader.scss
@@ -1,7 +1,7 @@
 
 .home-header-container {
     height: 60px;
-    padding: 10px 0;
+    padding-top: 10px;
 
     .home-header-content {
         width: 100%;
@@ -56,8 +56,39 @@
             width: 25%;
             display: flex;
             justify-content: end;
-            align-items: center;
-            // border: 1px solid red;
+            align-items: center;    
+            .support {
+                color: gray;
+                font-size: 15px;
+                font-weight: 600;
+                margin-right: 5px;
+                cursor: pointer;
+                i {
+                    color: #45c3d2;
+                    padding-right: 5px;
+                }
+            }
+            .language-vi {
+                font-weight: 600;
+                margin-right: 5px;
+                cursor: pointer;
+                &.active {
+                    color: #f7b500;
+                }
+                &:hover {
+                    opacity: 0.5;
+                }
+            }
+            .language-en {
+                font-weight: 600;
+                cursor: pointer;
+                &.active {
+                    color: #f7b500;
+                }
+                &:hover {
+                    opacity: 0.5;
+                }        
+            }
         }
 
     }
@@ -70,12 +101,12 @@
     background-repeat: no-repeat;
     background-position: center;
     background-size: cover;
-    height: 500px;
+    height: 620px;
     width: 100%;
 
     .content-up {
 
-        height: 50%;
+        height: 60%;
         background-image: linear-gradient(rgba(0, 0, 0, 0.25),rgba(255, 255, 255, 0.1));
 
         .title {
@@ -84,7 +115,7 @@
             margin-bottom: 20px;
             text-transform: uppercase;
             text-shadow: 1px 1px 1px #333;
-            padding-top: 45px;
+            padding-top: 80px;
         }
     
         .search {
@@ -118,7 +149,7 @@
 
     .content-down {
 
-        height: 50%;
+        height: 40%;
         display: flex;
         justify-content: center;
         align-content: flex-end;
