react slick slider

--- a/src/containers/HomePage/HomeHeader.scss
+++ b/src/containers/HomePage/HomeHeader.scss
@@ -70,7 +70,7 @@
             }
             .language-vi {
                 font-weight: 600;
-                margin-right: 5px;
+                margin: 0 15px;
                 cursor: pointer;
                 &.active {
                     color: #f7b500;
