--- a/src/containers/HomePage/HomePage.scss
+++ b/src/containers/HomePage/HomePage.scss
@@ -1,19 +1,22 @@
 
 .wrapper {
-    box-shadow: 3px 11px 5px 9px #888888;
+    margin-bottom: 10px;
+    &.bg-gray{
+        background-color: #ccc7c73b;
+    }
 }
 
 .section-specialty {
 
     padding: 20px 0;
-    .specialty-content {
+    .section-content {
 
-        .specialty-header {
+        .section-header {
             padding: 15px 0;
             display: flex;
             justify-content: space-between;
 
-            .specialty-header-title {
+            .section-header-title {
                 text-transform: capitalize;
                 font-size: 20px;
                 font-weight: 600;
@@ -63,24 +66,64 @@
             }
         }
 
-        .specialty-card {
+        .section-card {
             padding: 0 5px;
-            .specialty-img {
+            
+            .section-card-doctor {
+                padding: 10px 5px;
+                border: 1px solid rgba(100, 98, 98, 0.158);
+                
+            }
+
+            .section-img {
                 padding-top: 50%;
-                background-image: url('../../../assets/specialty/120331-co-xuong-khop.jpg');
                 background-color: #e0f710;
                 background-position: center; 
                 background-repeat: no-repeat; 
-                background-size: cover; 
+                background-size: cover;
+                
+                &.bg-specialty {
+                    background-image: url('../../assets/specialty/120331-co-xuong-khop.jpg');
+
+                }
+                &.bg-medical {
+                    background-image: url('../../assets/medical-facility/bv-viet-duc.jpg');
+                }
+
+                &.avatar {
+                    padding-top: 0;
+                    width: 120px;
+                    height: 120px;
+                    border-radius: 50%;
+                    margin: 0 auto;
+                }
+
             }
 
-            .specialty-title {
+            .section-title {
                 padding: 5px 0;
                 color: #959595;
                 &:hover {
                     color: #45c3d2;
                     cursor: pointer;
                 }
+            }
+
+            .doctor-name {
+                text-align: center;
+                font-size: 13px;
+                margin-top: 10px;
+                margin-bottom: 3px;
+                &:hover {
+                    color: #45c3d2;
+                    cursor: pointer;
+                }
+            }
+
+            .specialist-doctor {
+                text-align: center;
+                font-size: 12px;
+                color: #959595;
             }
         }
     }
