--- a/src/containers/HomePage/HomeHeader.scss
+++ b/src/containers/HomePage/HomeHeader.scss
@@ -2,6 +2,10 @@
 .home-header-container {
     height: 60px;
     padding-top: 10px;
+    position: sticky; 
+    top: 0;
+    background-color: white;
+    z-index: 100;
 
     .home-header-content {
         width: 100%;
