--- a/src/containers/HomePage/HomePage.scss
+++ b/src/containers/HomePage/HomePage.scss
@@ -4,6 +4,47 @@
     &.bg-gray{
         background-color: #ccc7c73b;
     }
+
+    &.about {  
+        .about-header {
+            text-transform: capitalize;
+            font-size: 20px;
+            font-weight: 600;
+            padding: 15px 0;
+        }
+
+        .about-content {
+
+            display: flex;
+            gap: 15px;
+
+            .content-left {
+                width: 50%;
+                .video {
+                    position: relative;
+                    width: 100%;
+                    padding-bottom: 56.25%;
+                    iframe {
+                        position: absolute;
+                        top: 0;
+                        left: 0;
+                        width: 100%;
+                        height: 100%;
+                        border: 0;
+                    }
+                }
+            }
+
+            .content-right {
+                width: 50%;
+            }
+        }
+    }
+
+    &.footer {
+        border: 1px solid green;
+        text-align: center;
+    }
 }
 
 .section-specialty {
@@ -68,6 +109,7 @@
 
         .section-card {
             padding: 0 5px;
+
             
             .section-card-doctor {
                 padding: 10px 5px;
@@ -125,6 +167,18 @@
                 font-size: 12px;
                 color: #959595;
             }
+
+            .handBook {
+                display: flex;
+                .section-img {
+                    padding-top: 50%;
+                    background-color: #e0f710;
+                    background-position: center; 
+                    background-repeat: no-repeat; 
+                    background-size: cover;
+                }
+            }
         }
+
     }
 }
