Hoàn Thiện Menu Phân Quyền Dành Cho Admin

--- a/src/components/Navigator.scss
+++ b/src/components/Navigator.scss
@@ -38,6 +38,7 @@
                 .menu-link {
                     text-decoration: none;
                     color: $text-in-light;
+
                 }
                 .sub-menu-list {
                     display: none;
@@ -69,7 +70,7 @@
                         }
                     }
                 }
-                &.active span {
+                &.active a {
                     font-weight: 500;
                     color: $colormain;
                 }
