--- a/src/containers/HomePage/HomePage.scss
+++ b/src/containers/HomePage/HomePage.scss
@@ -117,7 +117,7 @@
 
         .section-card {
             padding: 0 5px;
-
+            cursor: pointer;
             
             .section-card-doctor {
                 padding: 10px 5px;
