--- a/src/containers/System/Doctor/ManageSchedule.scss
+++ b/src/containers/System/Doctor/ManageSchedule.scss
@@ -14,21 +14,27 @@
 
     .pick-hour-container {
         
-        border: 1px solid red;
         display: flex;
         flex-wrap: wrap;
         gap: 10px;
         margin-top: 15px;
+        margin-bottom: 15px;
         padding-top: 12px;
         padding-bottom: 12px;
 
         button {
             border: 1px solid #eee;
+            
+            &.active{
+                background-color: yellow;
+            }
         }
+        
 
     }
     button.btn-save-schedule {
         background-color: aquamarine;
         width: max-content;
+        margin: 0 auto;
     }
 }
