--- a/src/containers/Patient/Doctor/DetailDoctor.scss
+++ b/src/containers/Patient/Doctor/DetailDoctor.scss
@@ -22,6 +22,18 @@
 
     }
 
+
+    .schedule-doctor {
+        display: flex;
+        .content-left {
+            width: 50%;
+        }
+
+        .content-right {
+            width: 50%;
+        }
+    }
+
     .detail-info-doctor {
         border-top: 1px solid #eee;
         background-color: #f9f9f9;
