--- a/src/containers/Patient/Doctor/DoctorExtraInfor.scss
+++ b/src/containers/Patient/Doctor/DoctorExtraInfor.scss
@@ -13,6 +13,7 @@
 
         .name-clinic {
             font-weight: bold;
+            margin: 4px 0;
         }
 
         .detail-address {
@@ -29,10 +30,20 @@
             cursor: pointer;
         }
 
+        .number-price {
+            margin: 0 15px;
+        }
+
         .detail-price {
             border-bottom: 1px solid #eee;
             padding: 7px 0;
 
+            .title {
+                text-transform: uppercase;
+                font-size: 14px;
+                color: #666;
+                font-weight: bold;
+            }
         }
 
         .more-detail-price {
